internal/gatewayapi/testdata/envoypatchpolicy-valid-merge-gateways.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    creationTimestamp: null
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
infraIR:
  envoy-gateway-class:
    proxy:
      config:
        apiVersion: gateway.envoyproxy.io/v1alpha1
        kind: EnvoyProxy
        metadata:
          creationTimestamp: null
          name: test
          namespace: envoy-gateway-system
        spec:
          logging: {}
          mergeGateways: true
        status: {}
      listeners:
      - address: null
        name: envoy-gateway/gateway-1/http
        ports:
        - containerPort: 10080
          name: envoy-gateway/gateway-1/http
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gatewayclass: envoy-gateway-class
      name: envoy-gateway-class
xdsIR:
  envoy-gateway-class:
    accessLog:
      text:
      - path: /dev/stdout
    envoyPatchPolicies:
    - TargetHttpRoute: ""
      jsonPatches:
      - name: envoy-gateway-gateway-1-http
        operation:
          op: replace
          path: /ignore_global_conn_limit
          value: "true"
        type: type.googleapis.com/envoy.config.listener.v3.Listener
      name: edit-ignore-global-limit
      namespace: envoy-gateway
      status:
        conditions:
        - lastTransitionTime: null
          message: EnvoyPatchPolicy has been accepted.--------dev--------
          reason: Accepted
          status: "True"
          type: Accepted
    - TargetHttpRoute: ""
      jsonPatches:
      - name: envoy-gateway-gateway-1-http
        operation:
          op: replace
          path: /per_connection_buffer_limit_bytes
          value: "1024"
        type: type.googleapis.com/envoy.config.listener.v3.Listener
      name: edit-conn-buffer-bytes
      namespace: envoy-gateway
      status:
        conditions:
        - lastTransitionTime: null
          message: EnvoyPatchPolicy has been accepted.--------dev--------
          reason: Accepted
          status: "True"
          type: Accepted
    http:
    - address: 0.0.0.0
      hostnames:
      - '*'
      isHTTP2: false
      name: envoy-gateway/gateway-1/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
